--- a/pi_client/src/Main.scss
+++ b/pi_client/src/Main.scss
@@ -1,34 +1,43 @@
 @font-face {
-    font-family: 'Nunito';
+    font-family: "Nunito";
     src: url(fonts/Nunito-Regular.ttf);
 }
 @font-face {
-    font-family: 'NunitoL';
+    font-family: "NunitoL";
     src: url(fonts/Nunito-Light.ttf);
 }
 
 $body-color: #3a3a3a;
 $secondary: #8f8f8f;
 $font-size-root: 16px;
-$font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-$font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
 @import "~bootstrap/scss/bootstrap";
 
 body {
     background: #f8f8f8;
-    
-    h1, h2, h3, h4, h5, h5 {
-        font-family: 'Nunito';
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h5 {
+        font-family: "Nunito";
     }
 
-    a, p {
-        font-family: 'NunitoL';
+    a,
+    p {
+        font-family: "NunitoL";
+        padding: 0;
+        margin: 0;
     }
 
     a {
         color: #576a3d;
-        transition: all .3s;
+        transition: all 0.3s;
         text-decoration: none;
 
         & :hover {
@@ -46,7 +55,7 @@ body {
             overflow-x: hidden;
             overflow-y: auto;
             border-right: 1px solid #f3f3f3;
-            box-shadow: 0 3px 30px rgba(0,0,0,.1), 0 3px 20px rgba(0,0,0,.1);
+            box-shadow: 0 3px 30px rgba(0, 0, 0, 0.1), 0 3px 20px rgba(0, 0, 0, 0.1);
 
             .logo img {
                 height: 80px;
@@ -63,10 +72,10 @@ body {
                         display: flex;
                         flex-direction: column;
                         align-items: center;
-                        font-size: .85rem;
+                        font-size: 0.85rem;
 
                         .bi {
-                            $icon: 50px;
+                            $icon: 40px;
                             width: $icon;
                             height: $icon;
                             margin-bottom: 5px;
@@ -75,7 +84,8 @@ body {
                         &:hover {
                             color: $secondary;
 
-                            .bi, .bi > * {
+                            .bi,
+                            .bi > * {
                                 color: $secondary;
                             }
                         }
@@ -87,7 +97,7 @@ body {
                         border-radius: 10px;
                         position: absolute;
                         width: 6px;
-                        height: 73px;
+                        height: 72px;
                     }
                 }
             }
@@ -115,13 +125,26 @@ body {
                 }
 
                 .filter-date-range {
-                    margin: 0;
-                    
-                    a.selected {
-                        font-weight: bold;
-                        font-family: 'Nunito';
+                    a {
+                        color: $secondary;
 
+                        &.selected {
+                            font-weight: bold;
+                            font-family: "Nunito";
+                            color: unset;
+                        }
                     }
+                }
+
+                .full-screen-center {
+                    display: flex;
+                    height: 100%;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+                .row {
+                    margin: 20px 0;
                 }
             }
         }
