--- a/pi_client/src/Main.scss
+++ b/pi_client/src/Main.scss
@@ -162,6 +162,17 @@ body {
                         tr:last-child td {
                             border-bottom: none;
                         }
+                        td {
+                            position: relative;
+                        }
+                        tr.strikeout td:before {
+                            content: " ";
+                            position: absolute;
+                            top: 50%;
+                            left: 0;
+                            border-bottom: 1px solid#6d6d6d;
+                            width: 100%;
+                        }
                     }
                 }
 
